--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
       "error",
       {
         "printWidth": 80,
-        "singleQuote": true,
+        "singleQuote": false,
         "semi": true,
         "tabWidth": 2,
         "arrowParens": "always",
