--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-intersection-observer": "^9.8.0",
     "tailwind-variants": "^0.1.20",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
