--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-intersection-observer": "^9.8.0",
+    "swiper": "^11.0.7",
     "tailwind-variants": "^0.1.20",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
