docs(env): Exemplificar as variaráveis de ambiente

--- a/.env.local.exemple
+++ b/.env.local.exemple
@@ -1,1 +1,14 @@
-NEXT_PUBLIC_TMDB_AUTHORIZATION="TOKEN DE AUTENTICAÇAO DO THE MOVIE DATABASE"
+### TMDB ###
+# Para obter a chave de acesso, acesse o site do TMDB: https://www.themoviedb.org/documentation/api
+# Faça o login ou crie uma conta
+# E vai até a aba API Reference > Authentication
+TMDB_AUTHORIZATION="Chave de acesso do TMDB"
+
+
+### API Betterbox ###
+API_BASE_URL="Rota para a API da aplicação"
+
+
+### NextAuth ###
+NEXTAUTH_URL="URL da aplicação"
+NEXTAUTH_SECRET="Chave de segurança"
