--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-advanced-cropper": "^0.19.6",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-intersection-observer": "^9.8.0",
